# CorrelationVector-rust

./: README.md
cvgen/: Cargo.toml
cvgen/src/: main.rs
cvlib/: Cargo.toml  Readme.md
cvlib/src/: correlationvector.rs  correlationvectorparsererror.rs  lib.rs  spinparams.rs
