[package]
name = "cvlib"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A rust implementation of the Correlation Vector"
repository = "https://github.com/TransientError/CorrelationVector-rust"
keywords = ["tracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
rand = "0.8.5"
thiserror = "1.0.31"
uuid = { version = "1.0.0", features = ["v4"] }
